# agno-config

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.example.yml  entrypoint.sh  pyproject.toml
agent-ui/: .env.example  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
agent-ui/src/: store.ts
agent-ui/src/api/: os.ts  routes.ts
agent-ui/src/app/: globals.css  layout.tsx  page.tsx
agent-ui/src/components/chat/ChatArea/: AgentCard.tsx  ChatArea.tsx  MessageArea.tsx  index.ts
agent-ui/src/components/chat/ChatArea/ChatInput/: ChatInput.tsx
agent-ui/src/components/chat/ChatArea/Messages/: AgentThinkingLoader.tsx  ChatBlankState.tsx  MessageItem.tsx  Messages.tsx
agent-ui/src/components/chat/ChatArea/Messages/Multimedia/Audios/: Audios.tsx
agent-ui/src/components/chat/Sidebar/: AuthToken.tsx  EntitySelector.tsx  ModeSelector.tsx  NewChatButton.tsx  SettingsView.tsx  Sidebar.tsx  ToolSelector.tsx
agent-ui/src/components/chat/Sidebar/Sessions/: DeleteSessionModal.tsx  SessionBlankState.tsx  SessionItem.tsx  Sessions.tsx
agent-ui/src/components/ui/icon/: constants.tsx  types.ts
agent-ui/src/components/ui/typography/MarkdownRenderer/: inlineStyles.tsx  styles.tsx
agent-ui/src/hooks/: useAIResponseStream.tsx  useAIStreamHandler.tsx  useChatActions.ts  useSessionLoader.tsx
agent-ui/src/types/: os.ts
agents/: __init__.py  app.py  chart_tools.py  file_helper_agent.py  parse_tool.py  registry.py  rk_helper_agent.py
(+2 files in other folders)
