[project]
name = "agno-config"
version = "0.1.0"
description = "Agno-based AI agents for Rusklimat internal services"
requires-python = ">=3.12"
dependencies = [
    "agno[os]>=1.0.0",
    "aiosqlite>=0.20.0",
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[dependency-groups]
dev = []
