[project]
name = "agno-config"
version = "0.1.0"
description = "Agno-based AI agents for Rusklimat internal services"
requires-python = ">=3.12"
dependencies = [
    "agno[os]>=1.0.0",
    "aiosqlite>=0.20.0",
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "openai>=1.0.0",
    "crawl4ai>=0.8.6",
    "matplotlib>=3.10.8",
    "reportlab>=4.4.10",
    "duckdb>=1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[dependency-groups]
dev = []
